Data Seeding + Testing + Todas las mejoras de código en base a sugerencias de SonarQube