@@ -12,7 +12,6 @@ import com.klubly.modules.identity.repository.RoleRepository;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -51,7 +50,7 @@ public class AuthController {
 
         List<Long> teamIds = user.getAffiliations().stream()
                 .map(affiliation -> affiliation.getTeam().getId())
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(new JwtAuthResponse(user.getId(),
             token, 
@@ -66,25 +65,25 @@ public class AuthController {
     }
 
     @PostMapping("/register")
-@Transactional
-public ResponseEntity<?> register(@RequestBody RegisterDTO registerDTO) {
-    // Creamos la instancia de la entidad y mapeamos los datos del DTO
-    User user = new User();
-    user.setUsername(registerDTO.username());
-    user.setEmail(registerDTO.email());
-    user.setPassword(passwordEncoder.encode(registerDTO.password()));
-    user.setFirstName(registerDTO.firstName());
-    user.setLastName(registerDTO.lastName());
-    user.setPhone(registerDTO.phone());
-    user.setAvatarURL(registerDTO.avatarURL());
-    user.setIsPending(true);
-    
-    // Seguridad: Siempre inactivo y siempre rol de Socio
-    user.setActive(false);
-    user.setRole(roleRepository.findById(3L)
-        .orElseThrow(() -> new ResourceNotFoundException("Error: Rol por defecto no encontrado")));
+    @Transactional
+    public ResponseEntity<Void> register(@RequestBody RegisterDTO registerDTO) {
+        // Creamos la instancia de la entidad y mapeamos los datos del DTO
+        User user = new User();
+        user.setUsername(registerDTO.username());
+        user.setEmail(registerDTO.email());
+        user.setPassword(passwordEncoder.encode(registerDTO.password()));
+        user.setFirstName(registerDTO.firstName());
+        user.setLastName(registerDTO.lastName());
+        user.setPhone(registerDTO.phone());
+        user.setAvatarURL(registerDTO.avatarURL());
+        user.setIsPending(true);
+        
+        // Seguridad: Siempre inactivo y siempre rol de Socio
+        user.setActive(false);
+        user.setRole(roleRepository.findById(3L)
+            .orElseThrow(() -> new ResourceNotFoundException("Error: Rol por defecto no encontrado")));
 
-    userRepository.save(user);
-    return ResponseEntity.ok().build();
-}
+        userRepository.save(user);
+        return ResponseEntity.ok().build();
+    }
 }
